fix: fix-responsive and add scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  /* -ms-overflow-style: none; 
-  scrollbar-width: none;  */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
-/* body::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none;
-} */
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
